<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BruParking</string>
    <string name="action_settings">Settings</string>
    <string name="action_home_location">Home Location</string>
    <string name="GPSAlertDialogTitle">Location unavailable</string>
    <string name="GPSAlertDialogMessage">I\'m not able to find your current location. Please enable GPS and Location services in settings</string>
    <string name="settings">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_current_zone">You are currently in %1$s zone</string>
    <string name="ok">OK</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_dialog_title">Choose language</string>
    <string name="pref_language_default">English</string>
    <string name="pref_home_location">Home Location</string>
    <string name="pref_home_location_dialog_title">Your home location</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="zone_red">RED</string>
    <string name="zone_blue">BLUE</string>
    <string name="zone_orange">ORANGE</string>
    
    
    
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_header_1">What does this app do?</string>
    <string name="help_text_1">This app will show you all street parking zones in Brussels, your current location within parking zone and parking rule of your current zone.</string>
    <string name="help_header_2">How to use it?</string>
    <string name="help_text_2">Make sure that you have GPS enabled. Without GPS, accurate detection of the zone is almost impossible.</string>
    <string name="help_header_3">Legal liability</string>
    
	<string name="home_marker">Home</string>
    
	<string name="title_activity_home_location">Home Location</string>
    <string name="pref_home_Text">homeAddressText</string>
    <string name="pref_home_LatLng">homeLatLng</string>
    <string name="pref_home_lat">homeLat</string>
    <string name="pref_home_lng">homeLng</string>
	<string name="addressNotAvailable">This is not a valid address</string>
	<string name="save">Save</string>
	<string name="preference_file_key">alksjhf345klhsafd</string>
	
	
</resources>
